--- a/ssl.conf
+++ b/ssl.conf
@@ -1,15 +1,14 @@
-# Getting a high secure SSL configured system
-
-# Tutorials used:
-# https://scotthelme.co.uk/a-plus-rating-qualys-ssl-test/
-# http://www.howtoforge.com/ssl-perfect-forward-secrecy-in-nginx-webserver
-
-# enable dh
-ssl_dhparam /etc/nginx/external/dh.pem;
-
-# protocols
-ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # disable poodle
-
-# ciphers
+# https://cipherli.st/
+ssl_protocols TLSv1.2;
 ssl_prefer_server_ciphers on;
-ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
+ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+ssl_ecdh_curve secp384r1; # Requires nginx >= 1.1.0
+ssl_session_cache shared:SSL:10m;
+ssl_session_tickets off; # Requires nginx >= 1.5.9
+ssl_stapling on; # Requires nginx >= 1.3.7
+ssl_stapling_verify on; # Requires nginx => 1.3.7
+resolver $DNS-IP-1 $DNS-IP-2 valid=300s;
+resolver_timeout 5s;
+add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
+add_header X-Frame-Options DENY;
+add_header X-Content-Type-Options nosniff;
